<resources>
    <string name="app_logo">MuzicLogo</string>
    <string name="app_name">MuzicApp</string>
    <!--  Register/Login Strings  -->
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="user_name">User Name</string>
    <string name="password">Password (At least 6 characters)</string>
    <string name="re_password">Retype Password</string>
    <string name="email">Email Address</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_text">
        Don\'t worry, we just need only your registered email address to reset your password
    </string>
    <string name="rs_pwd_success">Check your email!</string>
    <string name="rs_pwd_failure">There is an issue sending email!</string>
    <string name="go_back">Go back</string>
</resources>