<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SignInFragment">
    <androidx.cardview.widget.CardView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="40dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_logo"
            android:src="@mipmap/muzic_png_logo_foreground" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/choco_cooky"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/txtRegisterUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:fontFamily="@font/choco_cooky"
        android:hint="@string/user_name"
        android:autofillHints="User Name"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/txtRegisterEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:fontFamily="@font/choco_cooky"
        android:hint="@string/email"
        android:autofillHints="Email Address"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterUserName" />

    <EditText
        android:id="@+id/txtRegisterPwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:fontFamily="@font/choco_cooky"
        android:hint="@string/password"
        android:autofillHints="Password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterEmail" />

    <EditText
        android:id="@+id/txtRegisterRePwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:fontFamily="@font/choco_cooky"
        android:hint="@string/re_password"
        android:autofillHints="Retype Password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterPwd" />

    <ProgressBar
        android:id="@+id/progressRsPwd"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/btgrad_end"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="@+id/txtRegisterRePwd"
        app:layout_constraintStart_toStartOf="@+id/txtRegisterRePwd"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterRePwd" />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/gradient_button_background"
        android:enabled="false"
        android:fontFamily="@font/choco_cooky"
        android:text="@string/register"
        android:textColor="@color/transWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/txtRegisterRePwd"
        app:layout_constraintStart_toStartOf="@+id/txtRegisterRePwd" />
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/choco_cooky"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/tv_alreadyHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/choco_cooky"
            android:text="@string/login"
            android:textColor="@color/primary_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>